force-app/main/default/objects/Supplier_Buyer_Map__c/Supplier_Buyer_Map__c.object-meta.xml
<CustomObject>
    <label>Supplier Buyer Map</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Supplier Buyer Map ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Buyer Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>