force-app/main/default/objects/Supplier_Buyer_Map__c/fields/accepted_incoterms__c.field-meta.xml
<CustomField>
    <fullName>accepted_incoterms__c</fullName>
    <label>accepted incoterms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>FAS</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DPU</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
            <value>
                <fullName>*domestic*</fullName>
            </value>
            <value>
                <fullName>*services*</fullName>
            </value>
            <value>
                <fullName>DAF</fullName>
            </value>
            <value>
                <fullName>DES</fullName>
            </value>
            <value>
                <fullName>DEQ</fullName>
            </value>
            <value>
                <fullName>DDU</fullName>
            </value>
            <value>
                <fullName>DAT</fullName>
                <isActive>false</isActive>
                <label>DAT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>