force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Accepted_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Payment_Terms__c</fullName>
    <description>from invoice issuance to due date</description>
    <label>To check due date if not in invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>