force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Account_Agent__c.field-meta.xml
<CustomField>
    <fullName>Account_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Agent</description>
    <inlineHelpText>Account Agent or Broker</inlineHelpText>
    <label>Account Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Buyer Maps (Account Agent)</relationshipLabel>
    <relationshipName>Supplier_Buyer_Maps2</relationshipName>
    <type>Lookup</type>
</CustomField>