force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Account_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Agent_Name__c</fullName>
    <label>Account Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>