force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Account_transferred_to_Incomlend__c.field-meta.xml
<CustomField>
    <fullName>Account_transferred_to_Incomlend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a Map is transferred to another sales, there is 0.005 % commission</description>
    <inlineHelpText>Check if the account has be transferred to another sales or entity</inlineHelpText>
    <label>Map Transferred</label>
    <type>Checkbox</type>
</CustomField>