force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Displayed on the GUI</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>