force-app/main/default/objects/Supplier_Buyer_Map__c/fields/actual_funding_demand_on_expected__c.field-meta.xml
<CustomField>
    <fullName>actual_funding_demand_on_expected__c</fullName>
    <formula>if(expected_funding_demand_at_any_time__c=0,0,total_invoice_value_in_progress__c / expected_funding_demand_at_any_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual funding demand on expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>