force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Additional_Platform_fee__c.field-meta.xml
<CustomField>
    <fullName>Additional_Platform_fee__c</fullName>
    <label>Additional Platform fee in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>