force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Additional_Platform_fee_amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Platform_fee_amount__c</fullName>
    <label>Additional Platform fee amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>