force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Age_of_the_map__c.field-meta.xml
<CustomField>
    <fullName>Age_of_the_map__c</fullName>
    <formula>FLOOR((TODAY() - First_Invoice_Funded__c + 1)/365)+1</formula>
    <inlineHelpText>Age in years of the map after the first funded invoice date</inlineHelpText>
    <label>Age of the map</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>