force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Agent_Account__c.field-meta.xml
<CustomField>
    <fullName>Agent_Account__c</fullName>
    <description>Agent or Broker</description>
    <formula>Supplier__r.Agent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Agent or Broker</inlineHelpText>
    <label>Agent Account</label>
    <type>Text</type>
</CustomField>