force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Agent_Commission_Null__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission_Null__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if the agent commission is Null it is checked ( used for % sales commission rules)</description>
    <inlineHelpText>Check if the Agent commission is null for this map</inlineHelpText>
    <label>Agent Commission Null</label>
    <type>Checkbox</type>
</CustomField>