force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Agent_commission_null_Auto__c.field-meta.xml
<CustomField>
    <fullName>Agent_commission_null_Auto__c</fullName>
    <formula>IF( OR( ISNULL( Value_of_agent_s_fee__c ) = TRUE,  Value_of_agent_s_fee__c =0), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent commission null Auto</label>
    <type>Checkbox</type>
</CustomField>