force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Agent_s_fee_type__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_fee_type__c</fullName>
    <label>Account Agent&apos;s Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Part of the supplier discount rate (%)</fullName>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Part of the supplier discount rate Tiered</fullName>
                <label>Tiered</label>
            </value>
            <value>
                <fullName>Part of Insurance Cost</fullName>
                <isActive>false</isActive>
                <label>Part of Insurance Cost</label>
            </value>
            <value>
                <fullName>Platform fee (%)</fullName>
                <isActive>false</isActive>
                <label>Platform fee (%)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>