force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Amount_Prelisting_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_Prelisting_USD__c</fullName>
    <description>Sum of Invoice amount USD equivalent from the Map</description>
    <inlineHelpText>Sum of Invoice amount USD equivalent from the Map</inlineHelpText>
    <label>Invoice Amount Prelisting USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>