force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Annual_Credit_limit_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Credit_limit_Coverage__c</fullName>
    <inlineHelpText>Amount of the annual Insurance USD coverage for instalment calculation</inlineHelpText>
    <label>Annual Credit limit Coverage USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>