force-app/main/default/objects/Supplier_Buyer_Map__c/fields/approval_date__c.field-meta.xml
<CustomField>
    <fullName>approval_date__c</fullName>
    <label>approval date</label>
    <type>Date</type>
</CustomField>