force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_Time__c</fullName>
    <formula>DATETIMEVALUE( approval_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Date Time</label>
    <type>DateTime</type>
</CustomField>