force-app/main/default/objects/Supplier_Buyer_Map__c/fields/ARPA_Amendment_Sent__c.field-meta.xml
<CustomField>
    <fullName>ARPA_Amendment_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Date when the Docusign New Pricing Overdue has been sent ( Auto)</inlineHelpText>
    <label>ARPA Amendment Sent</label>
    <type>Checkbox</type>
</CustomField>