force-app/main/default/objects/Supplier_Buyer_Map__c/fields/ARPA_Amendment_Signed__c.field-meta.xml
<CustomField>
    <fullName>ARPA_Amendment_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When the DocuSign is Signed , it is tick and every new invoice will be ticked a well</inlineHelpText>
    <label>ARPA Amendment Signed</label>
    <type>Checkbox</type>
</CustomField>