force-app/main/default/objects/Supplier_Buyer_Map__c/fields/ARPA_Document_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>ARPA_Document_Reference_Number__c</fullName>
    <label>ARPA Document Reference Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>