force-app/main/default/objects/Supplier_Buyer_Map__c/fields/ARPA_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>ARPA_Ref_Number__c</fullName>
    <formula>IF (CONTAINS(Name__c, &quot;Reverse&quot; ),  &quot;REF:-&quot;+&quot;ARPA-&quot;+ Buyer__r.Id ,   &quot;REF:-&quot;+&quot;ARPA-&quot;+  Supplier__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARPA Ref Number</label>
    <type>Text</type>
</CustomField>