force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Auto_Satus_Map__c.field-meta.xml
<CustomField>
    <fullName>Auto_Satus_Map__c</fullName>
    <formula>IF
( Total_Financing_value_alltime__c &gt;0, &quot;Financed&quot;,
IF ( AND( TEXT(General_Status_Map__c) = &quot;active&quot;,TEXT(map_onboarding_stage__c) &lt;&gt;&quot;99.Onboarded&quot;),&quot;Pending&quot;, &quot;Dropped&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Satus Map</label>
    <type>Text</type>
</CustomField>