force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Automatically_send__c.field-meta.xml
<CustomField>
    <fullName>Automatically_send__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Automatically send payment reminder</label>
    <type>Checkbox</type>
</CustomField>