force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Average_Invoice_value__c.field-meta.xml
<CustomField>
    <fullName>Average_Invoice_value__c</fullName>
    <description>based on whats been posted to the platform</description>
    <formula>if(number_of_invoices_all_time__c = 0,0,
Total_Invoice_value_alltime__c / number_of_invoices_all_time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Invoice value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>