force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Bangladesh_special_case__c.field-meta.xml
<CustomField>
    <fullName>Bangladesh_special_case__c</fullName>
    <label>Bangladesh special case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No deposit</fullName>
            </value>
            <value>
                <fullName>With deposit</fullName>
            </value>
            <value>
                <fullName>With factory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>