force-app/main/default/objects/Supplier_Buyer_Map__c/fields/BNL_Sent__c.field-meta.xml
<CustomField>
    <fullName>BNL_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the BNL as been sent</description>
    <inlineHelpText>When the BNL as been sent</inlineHelpText>
    <label>BNL Sent</label>
    <type>Checkbox</type>
</CustomField>