force-app/main/default/objects/Supplier_Buyer_Map__c/fields/BNL_Signed__c.field-meta.xml
<CustomField>
    <fullName>BNL_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the BNL is signed , the box must be ticked</description>
    <inlineHelpText>When the BNL is signed , the box must be ticked</inlineHelpText>
    <label>BNL Signed</label>
    <type>Checkbox</type>
</CustomField>