force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Buyer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Buyer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Buyer Maps (Buyer)</relationshipLabel>
    <relationshipName>Supplier_Buyer_Maps1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>