force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_CL_CCY__c.field-meta.xml
<CustomField>
    <fullName>Buyer_CL_CCY__c</fullName>
    <formula>Buyer__r.Credit_limit_insurance_currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer CL CCY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>