force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Com_Sales__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Com_Sales__c</fullName>
    <formula>IF ( AND( Buyer__r.Account_transferred_another_Sales__c  = TRUE,  Buyer__r.Transferred_Date__c  &gt;  Approval_Date_Time__c )    , Buyer__r.Sales_Owner__r.sales_Com_3__c ,IF( OR ( Account_Agent__c = &quot;0012800000zY3QT&quot;,    Agent_commission_null_Auto__c   =TRUE),  IF (  Approval_Date_Time__c 
  &gt;=  DATETIMEVALUE( Time_new_commission_rules__c ) ,  Buyer__r.Sales_Owner__r.com_4__c , Buyer__r.Sales_Owner__r.Sales_Com_1__c ), IF(  Approval_Date_Time__c  
  &gt;=  DATETIMEVALUE( Time_new_commission_rules__c) ,  Buyer__r.Sales_Owner__r.Com_5_new_Map__c , Buyer__r.Sales_Owner__r.Sales_Com_2__c) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Com Sales %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>