force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Country__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Country__c</fullName>
    <formula>Buyer__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Country</label>
    <type>Text</type>
</CustomField>