force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Created_Date__c</fullName>
    <formula>Buyer__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Created Date</label>
    <type>Date</type>
</CustomField>