force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Credit_Limit_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Credit_Limit_USD_Equiv__c</fullName>
    <formula>Buyer__r.Credit_Limit_USD_Equiv__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Credit Limit USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>