force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_credit_risk__c.field-meta.xml
<CustomField>
    <fullName>Buyer_credit_risk__c</fullName>
    <label>Buyer credit risk</label>
    <type>TextArea</type>
</CustomField>