force-app/main/default/objects/Supplier_Buyer_Map__c/fields/buyer_EH_rating__c.field-meta.xml
<CustomField>
    <fullName>buyer_EH_rating__c</fullName>
    <formula>text(Buyer__r.Euler_Hermes_Credit_Rating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>buyer EH rating</label>
    <type>Text</type>
</CustomField>