force-app/main/default/objects/Supplier_Buyer_Map__c/fields/buyer_external_credit_rating__c.field-meta.xml
<CustomField>
    <fullName>buyer_external_credit_rating__c</fullName>
    <formula>Buyer__r.external_credit_rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>buyer external credit rating</label>
    <type>Text</type>
</CustomField>