force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Insured_By__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Insured_By__c</fullName>
    <formula>text(Buyer__r.Insured_by__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Insured By</label>
    <type>Text</type>
</CustomField>