force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Invoice_Verifier__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Invoice_Verifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Invoice Verifier</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supplier Buyer Maps</relationshipLabel>
    <relationshipName>Supplier_Buyer_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>