force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Invoice_Verifier_Notes__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Invoice_Verifier_Notes__c</fullName>
    <label>Buyer Invoice Verifier Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>