force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Known_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Known_Payment_Schedule__c</fullName>
    <label>Buyer Known Payment Schedule</label>
    <type>TextArea</type>
</CustomField>