force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Lead_Origin__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Lead_Origin__c</fullName>
    <label>Buyer Lead Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>