force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Lead_Rating__c</fullName>
    <formula>text( Buyer__r.Incomlend_Lead__r.Rating__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Lead Rating</label>
    <type>Text</type>
</CustomField>