force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_led_Approach__c.field-meta.xml
<CustomField>
    <fullName>Buyer_led_Approach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyer led Approach</label>
    <type>Checkbox</type>
</CustomField>