force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Name_for_Report__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name_for_Report__c</fullName>
    <formula>LEFT(  Buyer__r.Name  , 10 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Buyer Name for report if Duplicated Buyer</inlineHelpText>
    <label>Buyer Name for Report</label>
    <type>Text</type>
</CustomField>