force-app/main/default/objects/Supplier_Buyer_Map__c/fields/buyer_onboarding_stage__c.field-meta.xml
<CustomField>
    <fullName>buyer_onboarding_stage__c</fullName>
    <formula>text(Buyer__r.onboarding_stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>buyer onboarding stage</label>
    <type>Text</type>
</CustomField>