force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Owner__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Owner__c</fullName>
    <formula>Buyer__r.Owner.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Owner</label>
    <type>Text</type>
</CustomField>