force-app/main/default/objects/Supplier_Buyer_Map__c/fields/buyer_record_type__c.field-meta.xml
<CustomField>
    <fullName>buyer_record_type__c</fullName>
    <formula>Buyer__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>buyer record type</label>
    <type>Text</type>
</CustomField>