force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Registration_Number__c</fullName>
    <formula>Buyer__r.Company_registration_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Registration Number</label>
    <type>Text</type>
</CustomField>