force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Risk_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Risk_Visit_Date__c</fullName>
    <formula>Buyer__r.Risk_Visit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Risk Visit Date</label>
    <type>Date</type>
</CustomField>