force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_Sales_Zone__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Sales_Zone__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Buyer Sales  %</description>
    <inlineHelpText>Buyer Sales  %</inlineHelpText>
    <label>% Buyer Sales owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>