force-app/main/default/objects/Supplier_Buyer_Map__c/fields/buyer_supplier_map_approved__c.field-meta.xml
<CustomField>
    <fullName>buyer_supplier_map_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Submission Authorised</label>
    <type>Checkbox</type>
</CustomField>