force-app/main/default/objects/Supplier_Buyer_Map__c/fields/buyer_to_pay_incomlend_evidence__c.field-meta.xml
<CustomField>
    <fullName>buyer_to_pay_incomlend_evidence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>buyer to pay incomlend evidence</label>
    <type>Checkbox</type>
</CustomField>