force-app/main/default/objects/Supplier_Buyer_Map__c/fields/buyer_to_pay_incomlend_evidence_details__c.field-meta.xml
<CustomField>
    <fullName>buyer_to_pay_incomlend_evidence_details__c</fullName>
    <label>buyer to pay incomlend evidence details</label>
    <type>TextArea</type>
</CustomField>