force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_VAT_Company_reg__c.field-meta.xml
<CustomField>
    <fullName>Buyer_VAT_Company_reg__c</fullName>
    <formula>Buyer__r.Company_registration_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer VAT/ Company reg</label>
    <type>Text</type>
</CustomField>