force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Buyer_visited_by__c.field-meta.xml
<CustomField>
    <fullName>Buyer_visited_by__c</fullName>
    <formula>Buyer__r.Visited_by__r.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer visited by:</label>
    <type>Text</type>
</CustomField>