force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Camelot_Temp__c.field-meta.xml
<CustomField>
    <fullName>Camelot_Temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Camelot Temp</label>
    <type>Checkbox</type>
</CustomField>