force-app/main/default/objects/Supplier_Buyer_Map__c/fields/CL_Incomlend_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>CL_Incomlend_Change_Date__c</fullName>
    <label>(Autot) CL Incomlend Change Date</label>
    <type>Date</type>
</CustomField>