force-app/main/default/objects/Supplier_Buyer_Map__c/fields/CL_Incomlend_for_this_Map__c.field-meta.xml
<CustomField>
    <fullName>CL_Incomlend_for_this_Map__c</fullName>
    <label>CL Incomlend for this Map</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>