force-app/main/default/objects/Supplier_Buyer_Map__c/fields/CL_Limit_requested_for_this_Map__c.field-meta.xml
<CustomField>
    <fullName>CL_Limit_requested_for_this_Map__c</fullName>
    <description>Requesting by the buyer in case of reverse factoring or decided by us</description>
    <inlineHelpText>Requesting by the buyer in case of reverse factoring or decided by us</inlineHelpText>
    <label>CL Limit requested for this Map</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>