force-app/main/default/objects/Supplier_Buyer_Map__c/fields/CL_USD_Available_for_this_Map__c.field-meta.xml
<CustomField>
    <fullName>CL_USD_Available_for_this_Map__c</fullName>
    <formula>Credit_Limit_Avalaible__c / Marketplace__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CL USD  Available for this Map</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>