force-app/main/default/objects/Supplier_Buyer_Map__c/fields/CL_USD_requested_for_this_Map__c.field-meta.xml
<CustomField>
    <fullName>CL_USD_requested_for_this_Map__c</fullName>
    <formula>CL_Limit_requested_for_this_Map__c   * Marketplace__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CL USD requested for this Map</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>