force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Coface_Rating__c.field-meta.xml
<CustomField>
    <fullName>Coface_Rating__c</fullName>
    <label>Coface Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>