force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter of Credit</fullName>
            </value>
            <value>
                <fullName>Performance Bank Guarantee</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>SBLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>