force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Com_Sales_buyer_2__c.field-meta.xml
<CustomField>
    <fullName>Com_Sales_buyer_2__c</fullName>
    <formula>Buyer_Com_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Com Sales buyer 2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>