force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Com_Sales_buyer_3_del__c.field-meta.xml
<CustomField>
    <fullName>Com_Sales_buyer_3_del__c</fullName>
    <formula>Com_Sales_buyer_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Com Sales buyer 3</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>