force-app/main/default/objects/Supplier_Buyer_Map__c/fields/com_sales_supllier_2__c.field-meta.xml
<CustomField>
    <fullName>com_sales_supllier_2__c</fullName>
    <formula>Com_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% com sales supllier 2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>